@@ -22,14 +22,17 @@ from opengever.tabbedview.helper import workflow_state
 from opengever.tabbedview.interfaces import IStateFilterTableSourceConfig
 from opengever.tabbedview.utils import get_translated_transitions
 from opengever.tabbedview.utils import get_translated_types
+from opengever.tabbedview.utils import get_translated_public_trial_values
 from opengever.task.helper import task_type_helper
 from plone.dexterity.interfaces import IDexterityContainer
 from plone.registry.interfaces import IRegistry
+from zope.app.component.hooks import getSite
 from zope.app.pagetemplate import ViewPageTemplateFile
 from zope.component import getUtility, adapts
 from zope.component import queryAdapter
-from zope.interface import implements
+from zope.globalrequest import getRequest
 from zope.interface import Interface
+from zope.interface import implements
 import re
 
 
@@ -144,6 +147,20 @@ class OpengeverTab(object):
             results = list(results)
             results.sort(_type_sorter, reverse=sort_reverse)
 
+        elif sort_on in 'public_trial':
+
+            values = get_translated_public_trial_values(self.context, self.request)
+
+            def _public_trial_sorter(a, b):
+                return cmp(
+                    values.get(
+                        getattr(a, sort_on, ''), getattr(a, sort_on, '')),
+                    values.get(getattr(b, sort_on, ''), getattr(b, sort_on, ''))
+                    )
+
+            results = list(results)
+            results.sort(_public_trial_sorter, reverse=sort_reverse)
+
         return results
 
 
@@ -164,6 +181,12 @@ class OpengeverCatalogListingTab(grok.View, OpengeverTab,
     __call__ = CatalogListingView.__call__
     update = CatalogListingView.update
     render = __call__
+
+
+def translate_public_trial_options(item, value):
+    portal = getSite()
+    request = getRequest()
+    return portal.translate(value, context=request, domain="opengever.base")
 
 
 class Documents(OpengeverCatalogListingTab):
@@ -214,6 +237,9 @@ class Documents(OpengeverCatalogListingTab):
         {'column': 'containing_subdossier',
          'column_title': _('label_subdossier', default="Subdossier"), },
 
+        {'column': 'public_trial',
+         'column_title': _('label_public_trial', default="Public Trial"),
+         'transform': translate_public_trial_options},
         )
 
     enabled_actions = [
